# rust_web_template

./: Cargo.toml
src/: main.rs
src/controllers/: user.rs
src/routes/: mod.rs  user.rs
