[package]
name = "web-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["macros","rt-multi-thread"]}
dotenv = "0.15.0"
axum = "0.6"
serde = { version = "1.0.188", features = ["derive"] }


